--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000">
     <meta name="description" content="Best place for buy Bitcoin, Ethereum,Ripple, Stellar" />
-    <meta name="ui-version" content="1.0"/>
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" async>
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" async>
-    <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto:400" as="font" type="font/woff2" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,700" as="font" type="font/woff2" crossorigin>
+    <meta name="ui-version" content="1.0" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" async />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" async />
+    <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto:400" as="font" type="font/woff2" crossorigin />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,700" as="font" type="font/woff2" crossorigin />
     <title>Digiassetindo</title>
   </head>
   <body>
